Update with-editor 3.4.5 -> 3.4.6

--- a/with-editor-3.4.6/CHANGELOG
+++ b/with-editor-3.4.6/CHANGELOG
@@ -1,4 +1,8 @@
 # -*- mode: org -*-
+* v3.4.6    2025-09-01
+
+- Thoughts and whitespace.
+
 * v3.4.5    2025-08-01
 
 - No longer add "clear" to the shell's history when using vterm. #135
