--- a/vertico-2.5/CHANGELOG.org
+++ b/vertico-2.5/CHANGELOG.org
@@ -2,6 +2,18 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Version 2.5 (2025-09-08)
+
+- Introduce new =vertico--locals= variable for easier customization of
+  minibuffer-local variables.
+- =vertico-mouse=, =vertico-group-format=: Try to avoid overly long candidates such
+  that no truncation markers are shown if the fringe is disabled.
+- Undo fringe settings introduced in version 2.3. Users can customize this
+  according to their preference in =vertico--locals=.
+- Revert to =vertico--resize-window= again (from Vertico 1.9), which takes a
+  minibuffer height argument. Minibuffer resizing is still not correct on Emacs
+  31 if fringes are disabled, i.e., =(set-fringe-mode 0)=.
+
 * Version 2.4 (2025-06-27)
 
 - New function =vertico-sort-directories-first= which sorts a list of file names,
