--- a/marginalia-2.4/CHANGELOG.org
+++ b/marginalia-2.4/CHANGELOG.org
@@ -2,6 +2,12 @@
 #+author: Omar Antolín Camarena, Daniel Mendler
 #+language: en
 
+* Version 2.4 (2025-10-13)
+
+- Require Emacs 29.
+- Drop loaded indicator from theme annotator.
+- Drop obsolete variable alias =marginalia-annotator-registry=.
+
 * Version 2.3 (2025-09-08)
 
 - Support new ~project-buffer~ category.
