--- a/consult-2.9/CHANGELOG.org
+++ b/consult-2.9/CHANGELOG.org
@@ -2,6 +2,12 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Version 2.9 (2025-10-13)
+
+- Minor fixes.
+- Require Emacs 29.
+- =consult-info=: Reuse current info buffer when jumping to a search result.
+
 * Version 2.8 (2025-09-08)
 
 - New command =consult-grep-match= based on =consult-compile-error=, which shows
