--- a/consult-2.9/README.org
+++ b/consult-2.9/README.org
@@ -13,19 +13,19 @@
 #+html: <a href="https://stable.melpa.org/#/consult"><img alt="MELPA Stable" src="https://stable.melpa.org/packages/consult-badge.svg"/></a>
 
 Consult provides search and navigation commands based on the Emacs completion
-function [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Minibuffer-Completion.html][completing-read]]. Completion allows you to quickly select an item from a
-list of candidates. Consult offers asynchronous and interactive =consult-grep= and
-=consult-ripgrep= commands, and the line-based search command =consult-line=.
-Furthermore Consult provides an advanced buffer switching command =consult-buffer=
-to switch between buffers, recently opened files, bookmarks and buffer-like
-candidates from other sources. Some of the Consult commands are enhanced
-versions of built-in Emacs commands. For example the command =consult-imenu=
-presents a flat list of the Imenu with [[#live-previews][live preview]], [[#narrowing-and-grouping][grouping and narrowing]].
-Please take a look at the [[#available-commands][full list of commands]].
+function [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Minibuffer-Completion.html][completing-read]] documented in the [[info:elisp#Minibuffer Completion][Elisp manual]]. Completion allows you
+to quickly select an item from a list of candidates. Consult offers asynchronous
+and interactive =consult-grep= and =consult-ripgrep= commands, and the line-based
+search command =consult-line=. Furthermore Consult provides an advanced buffer
+switching command =consult-buffer= to switch between buffers, recently opened
+files, bookmarks and buffer-like candidates from other sources. Some of the
+Consult commands are enhanced versions of built-in Emacs commands. For example
+the command =consult-imenu= presents a flat list of the Imenu with [[#live-previews][live preview]],
+[[#narrowing-and-grouping][grouping and narrowing]]. Please take a look at the [[#available-commands][full list of commands]].
 
 Consult is fully compatible with completion systems centered around the standard
-Emacs =completing-read= API, notably the default completion system, [[https://github.com/minad/vertico][Vertico]], [[https://github.com/protesilaos/mct][Mct]],
-and [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Icomplete.html][Icomplete]].
+Emacs =completing-read= API, [[https://github.com/minad/vertico][Vertico]], [[https://github.com/protesilaos/mct][Mct]], and the built-in default completion
+system and Icomplete.
 
 This package keeps the completion system specifics to a minimum. The ability of
 the Consult commands to work well with arbitrary completion systems is one of
@@ -33,7 +33,7 @@ the main advantages of the package. Consult fits well into existing setups and
 it helps you to create a full completion environment out of small and
 independent components.
 
-You can combine the complementary packages [[https://github.com/minad/marginalia/][Marginalia]], [[https://github.com/oantolin/embark/][Embark]] and [[https://github.com/oantolin/orderless][Orderless]] with
+You can combine the complementary packages [[https://github.com/minad/marginalia][Marginalia]], [[https://github.com/oantolin/embark][Embark]] and [[https://github.com/oantolin/orderless][Orderless]] with
 Consult. Marginalia enriches the completion display with annotations, e.g.,
 documentation strings or file information. The versatile Embark package provides
 local actions, comparable to a context menu. These actions operate on the
@@ -745,7 +745,7 @@ repository via other non-standard package managers.
 There is the [[https://github.com/minad/consult/wiki][Consult wiki]], where additional configuration examples can be
 contributed.
 
-*IMPORTANT:* It is recommended that you enable [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Lexical-Binding.html][lexical binding]] in your
+*IMPORTANT:* It is recommended that you enable lexical binding in your
 configuration. Many Consult-related code snippets require lexical binding, since
 they use lambdas and closures.
 
@@ -1120,10 +1120,68 @@ Please provide the necessary important information with your bug report:
 - Do you use Evil? Consult does not provide Evil integration out of the box, but
   there is some support in [[https://github.com/emacs-evil/evil-collection][evil-collection]].
 
-When evaluating Consult-related code snippets you should enable [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Lexical-Binding.html][lexical binding]].
-Consult often relies on lambdas and lexical closures.
+When evaluating Consult-related code snippets you should enable lexical binding.
+Consult relies on lambdas and lexical closures.
 
 * Hacking
+** Creating simple commands
+
+When creating simple commands you can either use =consult--read= or directly rely
+on the built-in =completing-read= function. =consult--read= provides a nicer and
+more featureful API on top of =completing-read=. You can specify the completion
+candidates directly.
+
+#+begin_src emacs-lisp
+(consult--read
+ '("String A"
+   "String B"
+   "String C")
+ :sort nil
+ :prompt "Select: ")
+#+end_src
+
+If you pass it an alist of =(completion-string . value)=, you can look up the
+value.
+
+#+begin_src emacs-lisp
+(consult--read
+ '(("String A" . value-a)
+   ("String B" . value-b)
+   ("String C" . value-c))
+ :prompt "Select: "
+ :sort nil
+ :lookup #'consult--lookup-cdr)
+#+end_src
+
+You can add the result as a text property.
+
+#+begin_src emacs-lisp
+(consult--read
+ (list
+  (propertize "String A" 'consult--candidate 'value-a)
+  (propertize "String B" 'consult--candidate 'value-b)
+  (propertize "String C" 'consult--candidate 'value-c))
+ :prompt "Select: "
+ :sort nil
+ :lookup #'consult--lookup-candidate)
+#+end_src
+
+You can add other text properties.
+
+#+begin_src emacs-lisp
+(consult--read
+ (mapcar (lambda (value)
+           (propertize
+            (format "%s %s"
+                    (propertize "Option" 'face 'font-lock-comment-face)
+                    value)
+            'consult--candidate value))
+         '("A" "B" "C"))
+ :prompt "Select: "
+ :sort nil
+ :lookup #'consult--lookup-candidate)
+#+end_src
+
 ** Creating asynchronous completion commands
 
 If you have a completion source that's both dynamic and expensive to generate,
@@ -1236,18 +1294,17 @@ commands originated in the Counsel package or the wiki of the Selectrum package.
 This package exists only thanks to the help of these great contributors and
 thanks to the feedback of many users. Thank you!
 
-Code contributions: [[https://github.com/aagon][Aymeric Agon-Rambosson]], [[https://github.com/amosbird][Amos Bird]], [[https://github.com/ashton314][Ashton Wiersdorf]], [[https://github.com/aspiers/][Adam
-Spiers]], [[https://github.com/astoff][Augusto Stoffel]], [[https://github.com/clemera/][Clemens Radermacher]], [[https://github.com/fuzy112][Zhengyi]], [[https://github.com/geolessel][Geoffrey Lessel]], [[https://github.com/iostapyshyn][Illia
+Code contributions: [[https://github.com/aagon][Aymeric Agon-Rambosson]], [[https://github.com/amosbird][Amos Bird]], [[https://github.com/ashton314][Ashton Wiersdorf]], [[https://github.com/aspiers][Adam
+Spiers]], [[https://github.com/astoff][Augusto Stoffel]], [[https://github.com/clemera][Clemens Radermacher]], [[https://github.com/fuzy112][Zhengyi]], [[https://github.com/geolessel][Geoffrey Lessel]], [[https://github.com/iostapyshyn][Illia
 Ostapyshyn]], [[https://github.com/jakanakaevangeli][jakanakaevangeli]], [[https://github.com/jdtsmith][JD Smith]], [[https://github.com/jyp][Jean-Philippe Bernardy]], [[https://github.com/mattiasdrp][mattiasdrp]],
-[[https://github.com/mohamed-abdelnour][Mohamed Abdelnour]], [[https://github.com/mohkale][Mohsin Kaleem]], [[https://github.com/noctuid][Fox Kiester]], [[https://github.com/oantolin/][Omar Antolín Camarena]], [[https://github.com/okamsn/][Earl
-Hyatt]], [[https://github.com/omar-polo][Omar Polo]], [[https://github.com/piotrkwiecinski][Piotr Kwiecinski]], [[https://github.com/rswgnu][Robert Weiner]], [[https://github.com/s-kostyaev/][Sergey Kostyaev]], [[https://github.com/scvalex][Alexandru
-Scvorțov]], [[https://github.com/tecosaur][Tecosaur]], [[https://github.com/thisirs][Sylvain Rousseau]], [[https://github.com/tomfitzhenry/][Tom Fitzhenry]], [[https://hg.serna.eu][Iñigo Serna]] and [[https://github.com/akreisher][Alex
-Kreisher]].
+[[https://github.com/mohamed-abdelnour][Mohamed Abdelnour]], [[https://github.com/mohkale][Mohsin Kaleem]], [[https://github.com/noctuid][Fox Kiester]], [[https://github.com/oantolin][Omar Antolín Camarena]], [[https://github.com/okamsn][Earl
+Hyatt]], [[https://github.com/omar-polo][Omar Polo]], [[https://github.com/piotrkwiecinski][Piotr Kwiecinski]], [[https://github.com/rswgnu][Robert Weiner]], [[https://github.com/s-kostyaev][Sergey Kostyaev]], [[https://github.com/scvalex][Alexandru
+Scvorțov]], [[https://github.com/tecosaur][Tecosaur]], [[https://github.com/thisirs][Sylvain Rousseau]], [[https://github.com/tomfitzhenry][Tom Fitzhenry]], [[https://hg.serna.eu][Iñigo Serna]] and [[https://github.com/akreisher][Alex Kreisher]].
 
-Advice and useful discussions: [[https://github.com/Qkessler][Enrique Kessler Martínez]], [[https://github.com/alphapapa/][Adam Porter]], [[https://github.com/bdarcus][Bruce
-d'Arcus]], [[https://github.com/clemera/][Clemens Radermacher]], [[https://github.com/dgutov/][Dmitry Gutov]], [[https://github.com/hmelman/][Howard Melman]], [[https://github.com/iyefrat][Itai Y. Efrat]], [[https://github.com/jdtsmith][JD
-Smith]], [[https://github.com/manuel-uberti/][Manuel Uberti]], [[https://github.com/monnier/][Stefan Monnier]], [[https://github.com/oantolin/][Omar Antolín Camarena]], [[https://github.com/purcell/][Steve Purcell]],
-[[https://github.com/raxod502][Radon Rosborough]], [[https://github.com/tomfitzhenry/][Tom Fitzhenry]] and [[https://protesilaos.com][Protesilaos Stavrou]].
+Advice and useful discussions: [[https://github.com/Qkessler][Enrique Kessler Martínez]], [[https://github.com/alphapapa][Adam Porter]], [[https://github.com/bdarcus][Bruce
+d'Arcus]], [[https://github.com/clemera][Clemens Radermacher]], [[https://github.com/dgutov][Dmitry Gutov]], [[https://github.com/hmelman][Howard Melman]], [[https://github.com/iyefrat][Itai Y. Efrat]], [[https://github.com/jdtsmith][JD
+Smith]], [[https://github.com/manuel-uberti][Manuel Uberti]], [[https://github.com/monnier][Stefan Monnier]], [[https://github.com/oantolin][Omar Antolín Camarena]], [[https://github.com/purcell][Steve Purcell]],
+[[https://github.com/raxod502][Radon Rosborough]], [[https://github.com/tomfitzhenry][Tom Fitzhenry]] and [[https://protesilaos.com][Protesilaos Stavrou]].
 
 #+html: <!--
 
