--- a/vertico-2.6/CHANGELOG.org
+++ b/vertico-2.6/CHANGELOG.org
@@ -2,6 +2,12 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Version 2.6 (2025-11-15)
+
+- Require Emacs 29.1.
+- =vertico-buffer=: Check if =mode-line-format= is =nil= when computing an appropriate
+  =vertico-count= for the window height.
+
 * Version 2.5 (2025-09-08)
 
 - Introduce new =vertico--locals= variable for easier customization of
