--- a/consult-3.0/README.org
+++ b/consult-3.0/README.org
@@ -463,8 +463,8 @@ to be considered.
 (consult-customize
  consult-ripgrep consult-git-grep consult-grep consult-man
  consult-bookmark consult-recent-file consult-xref
- consult--source-bookmark consult--source-file-register
- consult--source-recent-file consult--source-project-recent-file
+ consult-source-bookmark consult-source-file-register
+ consult-source-recent-file consult-source-project-recent-file
  ;; my/command-wrapping-consult    ;; disable auto previews inside my command
  :preview-key '(:debounce 0.4 any) ;; Option 1: Delay preview
  ;; :preview-key "M-.")            ;; Option 2: Manual preview
@@ -610,7 +610,7 @@ sources can be added to this list.
 As an example, the bookmark source is defined as follows:
 
 #+begin_src emacs-lisp
-(defvar consult--source-bookmark
+(defvar consult-source-bookmark
   `(:name     "Bookmark"
     :narrow   ?m
     :category bookmark
@@ -660,8 +660,8 @@ configure a manual preview as follows.
 
 #+begin_src emacs-lisp
 (consult-customize
- consult--source-bookmark consult--source-file-register
- consult--source-recent-file consult--source-project-recent-file
+ consult-source-bookmark consult-source-file-register
+ consult-source-recent-file consult-source-project-recent-file
  :preview-key "M-.")
 #+end_src
 
@@ -862,8 +862,8 @@ configuration examples.
    consult-theme :preview-key '(:debounce 0.2 any)
    consult-ripgrep consult-git-grep consult-grep consult-man
    consult-bookmark consult-recent-file consult-xref
-   consult--source-bookmark consult--source-file-register
-   consult--source-recent-file consult--source-project-recent-file
+   consult-source-bookmark consult-source-file-register
+   consult-source-recent-file consult-source-project-recent-file
    ;; :preview-key "M-."
    :preview-key '(:debounce 0.4 any))
 
