--- a/consult-3.0/CHANGELOG.org
+++ b/consult-3.0/CHANGELOG.org
@@ -2,6 +2,13 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Version 3.0 (2025-11-15)
+
+- Make =consult-source-*= variables public. These variables are commonly
+  customized via =consult-customize= and they are referenced by the customizable
+  variable =consult-buffer-sources=. Keep obsolete =consult--source-*= variable
+  aliases.
+
 * Version 2.9 (2025-10-13)
 
 - Minor fixes.
