--- a/gptel-0.9.9.3/NEWS
+++ b/gptel-0.9.9.3/NEWS
@@ -1,5 +1,170 @@
 # -*- mode: org; -*-
 
+* 0.9.9.3
+
+** Breaking changes
+
+- The models =gpt-4-copilot= and =o1= have been removed from the default
+  list of GitHub Copilot models.  These models are no longer available
+  in the GitHub Copilot API.
+
+- Link handling in gptel chat buffers has changed, hopefully for the
+  better.  When ~gptel-track-media~ is non-nil, gptel follows links in
+  the prompt and includes their contents with queries.  Previously,
+  links to files had to be placed "standalone", surrounded by blank
+  lines, for the files to be included in the prompt.  This limitation
+  has been removed -- all supported links in the prompt will be followed
+  now.
+
+  The "standalone" limitation was imposed to make included links stand
+  out visually and avoid accidental inclusions, but in practice users
+  were often confused about whether a link would be sent.  gptel now
+  prominently annotates links that will be followed and sent (see
+  below), so it should be visually obvious when links will be followed.
+  You can revert to the old behavior by customizing gptel, see below.
+
+- The model =claude-3-sonnet-20240229= has been removed from the default
+  list of Anthropic models.  This model is no longer available in the
+  Anthropic API.
+
+- The models =gemini-1.5-flash-8b=, =gemini-1.5-flash=,
+  =gemini-1.5-pro-latest=, =gemini-2.0-flash-thinking-exp-01-21=,
+  =gemini-2.0-flash-lite-preview-02-05=,
+  =gemini-2.5-flash-lite-preview-06-17=,
+  =gemini-2.5-pro-preview-06-05=, =gemini-2.5-pro-preview-05-06=,
+  =gemini-2.5-flash-preview-05-20=, =gemini-2.5-pro-preview-03-25= and
+  =gemini-2.5-pro-exp-03-25= have been removed from the default list
+  of Gemini models.  These models are either no longer available, or
+  they have been superseded by their stable, non-preview versions.  If
+  required, you can add these models back to the Gemini backend in
+  your personal configuration:
+  #+begin_src emacs-lisp
+  (push 'gemini-2.5-pro-preview-05-06
+        (gptel-backend-models (gptel-get-backend "Gemini")))
+  #+end_src
+
+
+** New models and backends
+
+- GitHub Copilot backend: Add support for =gpt-5-codex=,
+  =claude-sonnet-4.5= and =claude-haiku-4.5=
+
+- Add support for =claude-sonnet-4-5-20250929= and
+  =claude-haiku-4-5-20251001=.
+
+- Add support for =gemini-pro-latest=, =gemini-flash-latest= and
+  =gemini-flash-lite-latest=.  These models point to the latest Gemini
+  models of the corresponding type.
+
+- Add support for =gemini-2.5-flash-preview-09-2025= and
+  =gemini-2.5-flash-lite-preview-09-2025=.
+
+** New features and UI changes
+
+- New minor-mode ~gptel-highlight-mode~ to highlight LLM responses and
+  more.  An oft-requested feature, gptel can now highlight responses by
+  decorating the (left) margin or fringe, and apply a face to the
+  response region.  To use it, just turn on ~gptel-highlight-mode~ in
+  any buffer (and not just dedicated chat buffers).  You can customize
+  the type of decoration performed via ~gptel-highlight-methods~, which
+  see.
+
+- Link annotations: When ~gptel-track-media~ is enabled in gptel chat
+  buffers, gptel follows (Markdown/Org) links to files in the prompt and
+  includes these files with queries.  However, it was not clear if a
+  link type was supported and would be included, making this feature
+  unreliable and difficult to use.
+
+  Now all links in the prompt are explicitly annotated in real-time in
+  gptel buffers.  Links that will not be sent are marked as such, and
+  the link tooltip explains why.  Links that will be sent are explicitly
+  indicated as well.
+
+- New user options ~gptel-markdown-validate-link~ and
+  ~gptel-org-validate-link~: These control whether links in Markdown/Org
+  buffers are followed and their sources included in gptel's prompt.
+  Their value should be a function that determines if a link is to be
+  considered valid for inclusion with the gptel query.  By default they
+  allow all links, but they can be customized to require "standalone"
+  link placement, which is gptel's past behavior.
+
+- gptel preset specifications can now modify the current values of gptel
+  options instead of replacing them, allowing better composition of
+  presets with your Emacs environment and with each other.
+
+  For example, it is common to want to add more LLM tools via a preset
+  to an existing set in gptel-tools.  To this end, add a small,
+  declarative DSL for use in gptel preset definitions.  For example, you
+  can now do the following:
+  #+begin_src emacs-lisp
+  (gptel-make-preset 'websearch
+    :tools '(:append ("search_web" "read_url")))
+  #+end_src
+  to add to the current list in ~gptel-tools~ instead of replacing it.
+  See the documentation of ~gptel-make-preset~ for more details.
+
+- You can now apply a preset from gptel's menu using ~completing-read~
+  instead of the menu.  This is bound to =@= in the presets menu, so
+  that =@ @= in gptel's menu will bring up the ~completing-read~
+  prompter.
+
+  This is an interim solution to the problem of the gptel presets menu
+  not scaling well to more than about 25 presets.  This menu is intended
+  to be redesigned eventually.
+
+- Tool result and reasoning blocks are now folded by default in Markdown
+  and text buffers.  You can cycle their folded state by pressing =Tab=
+  with the cursor on the opening or closing line containing the code
+  fences.
+
+- =gptel-request= is now a standalone library, independent of gptel
+  and its UI.  This is intended
+  + to provide a clean separation between ~gptel-request~ (the LLM
+    querying library) and ~gptel~ (the LLM interaction UI).
+  + To make it simpler to create alternative UIs for gptel, wherein the
+    package author may simply =(require 'gptel-request)= to access the
+    gptel-request API.
+  + To make it so gptel does not need to be loaded to use
+    ~gptel-request~.
+
+  The =gptel-request= feature does not provide any response handling,
+  and expects the user to provide a response callback.  If you want to
+  reuse ~gptel-send~'s response handler you can =(require 'gptel)=.
+
+  For logistical reasons, the =gptel-request= library will continue to
+  be shipped with =gptel=.
+
+- New user option ~gptel-context~: This variable can be used to specify
+  additional context sources for gptel queries, usually files or
+  buffers.  It serves the longstanding requests of enabling buffer-local
+  context specification, as well as context specification in gptel
+  presets and programmatic gptel use.  As always, in a preset definition
+  this corresponds to the key with name of the variable with the
+  "gptel-" prefix stripped:
+  #+begin_src emacs-lisp
+  (gptel-make-preset 'with-docs
+    :context '("./README.md" "./README" "./README.org"))
+  #+end_src
+  Each entry in ~gptel-context~ is a file path or a buffer object, but
+  other kinds of specification are possible.  See its documentation for
+  details.
+
+- ~gptel-mcp-connect~ can now start MCP servers synchronously.  This
+  is useful for scripting purposes, when MCP tools need to be
+  available before performing other actions.  One common use is
+  starting MCP servers when applying a gptel preset.
+
+- "gitignored" files are omitted by default when adding directories to gptel's
+  context.  This setting can be controlled via the user option
+  ~gptel-context-restrict-to-project-files~.  (This only applies to directories,
+  individual files specified via ~gptel-add-file~ will always be added to the
+  context.)
+
+- ~gptel-make-bedrock~ now checks for the ~AWS_BEARER_TOKEN_BEDROCK~ environment
+  variable parameter and uses it for Bedrock API key based authentication if
+  present. See
+  https://docs.aws.amazon.com/bedrock/latest/userguide/api-keys.html.
+
 * 0.9.9 2025-08-02
 
 ** Breaking changes
