--- a/marginalia-2.7/CHANGELOG.org
+++ b/marginalia-2.7/CHANGELOG.org
@@ -2,6 +2,15 @@
 #+author: Omar Antolín Camarena, Daniel Mendler
 #+language: en
 
+* Version 2.7 (2025-12-31)
+
+- Run annotation functions in original window and original buffer.
+
+* Version 2.6 (2025-12-19)
+
+- Stop providing an =annotation-function=. The =affixation-function= has been
+  supported since Emacs 28.1 and Marginalia requires Emacs 29.1.
+
 * Version 2.5 (2025-11-15)
 
 - Annotate definition prefix symbols which appear in =describe-function=,
