--- a/consult-3.1/CHANGELOG.org
+++ b/consult-3.1/CHANGELOG.org
@@ -2,6 +2,18 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Version 3.1 (2025-11-29)
+
+- =consult-line=, =consult-line-multi=, =consult-outline=: Use lazy fontification for
+  completion candidates. This greatly reduces the startup cost of the commands.
+  =consult-line= becomes usable on very large files now, up to files like the
+  SQLite amalgamation. Furthermore =consult-line-multi= candidates are fontified,
+  which was not the case before.
+- =consult-focus-lines=: Do not fontify buffer eagerly to reduce startup cost. The
+  focused lines are fontified lazily when they come into sight.
+- =consult--read=: Stop providing an =annotation-function=. Rely on the
+  =affixation-function= only.
+
 * Version 3.0 (2025-11-15)
 
 - Make =consult-source-*= variables public. These variables are commonly
