Update with-editor 3.4.7 -> 3.4.8

--- a/with-editor-3.4.8/CHANGELOG
+++ b/with-editor-3.4.8/CHANGELOG
@@ -1,4 +1,8 @@
 # -*- mode: org -*-
+* v3.4.8    2026-01-01
+
+- Various build improvements.
+
 * v3.4.7    2025-11-01
 
 - Thoughts and whitespace.
